# InferenceCenter

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  clients.json  docker-compose.yml  run_all_tests.py  test_auth.py  test_client.py  test_hello.py  test_metrics_subscription.py  test_multi_session.py  test_proxy_connection.py
.github/workflows/: test.yml
models_venv/: pyvenv.cfg
src/: main.cpp
src/core/: Engine.cpp  Engine.h  EnvLoader.cpp  EnvLoader.h  Metrics.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h
src/hardware/: Monitor.cpp  Monitor.h
src/server/: ClientAuth.cpp  ClientAuth.h  MessageDispatcher.h  Protocol.h  RequestContext.h  Utils.h  WsServer.cpp  WsServer.h
src/server/handlers/: AuthHandler.h  InferenceHandler.h  MetricsHandler.h  PingHandler.h  SessionHandler.h
src/server/services/: InferenceService.cpp  InferenceService.h  MetricsService.cpp  MetricsService.h
tests/: test_auth.cpp  test_env.cpp  test_protocol.cpp
